--- a/playbooks/roles/stacks/templates/traefik/stack.yml.j2
+++ b/playbooks/roles/stacks/templates/traefik/stack.yml.j2
@@ -8,7 +8,7 @@ services:
         order: start-first
       labels:
         traefik.enable: 'true'
-        traefik.constraint-label: traefik-private
+        traefik.constraint-label: traefik-public
         traefik.http.routers.traefik-dashboard.entrypoints: websecure
         traefik.http.routers.traefik-dashboard.rule: Host(`traefik.{{ app_domain_name }}`)
         traefik.http.routers.traefik-dashboard.service: api@internal
